# mcp-music-forge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.api  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
bot/: main.py
core/: logging.py  settings.py
core/domain/: job.py
core/infra/: db.py
core/ports/: provider_port.py  storage_port.py
core/services/: download_orchestrator.py  provider_registry.py  queue.py
data/jobs/6a2a8ea9c8e3420eaadde953b82ef94c/original/: Jafart & templa & Boss V - DejavuGirl (prod. southdrug).m4a
data/jobs/d4fbf828f8584e8e9a0be5acf7dccd62/original/: ＊free＊ gunnr + nate sib type beat - ＂ambivalent＂.webm
data/jobs/da88781ac53545b5a8d2faaf12abefa4/original/: MD.m4a
data/jobs/ff3aa305ea2f40138558bc458937a5a7/original/: Citizen [FREESTYLE].m4a
docs/: ARCHITECTURE.md  BUILD_RUN_DEPLOY.md  CI_CD.md  README_RU.md  VER_1.0.md
mcp_music_forge/: mcp_app.py
mcp_music_forge/resources/: __init__.py  files.py
mcp_music_forge/tools/: enqueue_download.py  get_job_status.py  probe_url.py
providers/soundcloud_ytdlp/: __init__.py  adapter.py
providers/youtube/: __init__.py  adapter.py
storage/: local_fs.py
tests/: conftest.py  test_download_orchestrator.py  test_soundcloud_provider.py
transcoder/: __init__.py  ffmpeg_cli.py
workers/: tasks.py
